fixed google signin frontend

--- a/web/.env
+++ b/web/.env
@@ -1,1 +1,2 @@
-CLIENT_ID=774054901598-entm3trieki9l05nc522280n6bpsk9oe.apps.googleusercontent.com
+SKIP_PREFLIGHT_CHECK=true
+REACT_APP_GOOGLE_CLIENT_ID=774054901598-entm3trieki9l05nc522280n6bpsk9oe.apps.googleusercontent.com
