--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "the best ITP project team ever made in eternati",
   "main": "web/index.js",
   "scripts": {
-    "start": "node backend/src/app.js",
+    "start": "node backend/app.js",
     "heroku-postbuild": "cd backend && npm install && cd ../web && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
     "dev": "concurrently \"(cd web && npm start)\" \"(cd backend && npm run dev)\"",
     "setup": "npm i && cd web && npm i && cd ../backend && npm i"
