--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/Yujio5017/boba-smores#readme",
   "dependencies": {
+    "@iconify/react": "^3.0.1",
+    "@material-ui/core": "^4.12.3",
     "body-parser": "^1.19.0",
     "concurrently": "^6.2.1",
     "connect-mongodb-session": "^3.0.0",
