--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "ag-grid-community": "^26.0.0",
+    "ag-grid-react": "^26.0.0",
     "axios": "^0.21.4",
     "google-auth-library": "^7.8.0",
     "prop-types": "^15.7.2",
