--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "dependencies": {
     "@iconify/react": "^3.0.1",
     "@material-ui/core": "^4.12.3",
+    "ag-grid": "^18.1.2",
+    "ag-grid-community": "^26.1.0",
+    "ag-grid-react": "^26.1.0",
     "body-parser": "^1.19.0",
     "concurrently": "^6.2.1",
     "connect-mongodb-session": "^3.0.0",
