--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "web/index.js",
   "scripts": {
     "start": "node backend/app.js",
-    "heroku-postbuild": "cd backend && npm install && cd ../web && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
+    "heroku-postbuild": "npm i && cd backend && npm install && cd ../web && npm install --only=dev --no-shrinkwrap && npm run build",
     "dev": "concurrently \"(cd web && npm start)\" \"(cd backend && npm run dev)\"",
     "setup": "npm i && cd web && npm i && cd ../backend && npm i"
   },
