--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "google-auth-library": "^7.9.1",
     "mongodb": "^4.1.0",
     "mongoose": "^5.13.7",
+    "multer": "^1.4.3",
     "session": "^0.1.0"
   }
 }
