tag show, need backend fix

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "heroku": "^7.59.0",
     "mongodb": "^4.1.0",
     "mongoose": "^5.13.7",
+    "react-color": "^2.19.3",
     "session": "^0.1.0"
   }
 }
