--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "framer-motion": "^4.1.17",
     "heroku": "^7.59.0",
     "mongodb": "^4.1.0",
     "mongoose": "^5.13.7",
